# Catten

./: .gitignore  Makefile  README.md  REUSE.toml  SETUP.md  limine.conf  package-lock.json
catten/: Cargo.toml  rust-toolchain.toml  rustfmt.toml
catten/.cargo/: config.toml
catten/src/: main.rs  panic.rs
catten/src/common/: bitwise.rs  constants.rs  integer.rs  mod.rs  size.rs  time.rs
catten/src/common/collections/: boxed_slice.rs  circular_queue.rs  id_table.rs  mod.rs
catten/src/common/time/: duration.rs
catten/src/cpu/: mod.rs
catten/src/cpu/isa/: mod.rs
catten/src/cpu/multiprocessor/: ipi.rs  lp.rs  lp_local.rs  mod.rs  startup.rs
catten/src/cpu/scheduler/: mod.rs
catten/src/cpu/threads/: mod.rs
catten/src/drivers/: mod.rs
catten/src/drivers/display/: limine_fb.rs  mod.rs
catten/src/drivers/input/: hid.rs  i8042.rs  mod.rs
catten/src/drivers/uart/: mod.rs
catten/src/environment/: mod.rs
catten/src/environment/acpi/: mod.rs  uacpi_kernel.rs
catten/src/environment/arm_smc/: mod.rs
catten/src/environment/boot_protocol/: limine.rs  mod.rs
catten/src/environment/firmware/: mod.rs
catten/src/event/: mod.rs
catten/src/framebuffer/: colors.rs  console.rs  framebuffer.rs  mod.rs
catten/src/init/: mod.rs
catten/src/log/: mod.rs
catten/src/memory/: mod.rs
catten/src/memory/allocator/: memory.rs  mod.rs  oom_handler.rs
catten/src/memory/allocators/: global_allocator.rs  mod.rs  stack_allocator.rs
catten/src/memory/linear/: address_map.rs
catten/src/memory/physical/: mod.rs
catten/src/self_test/: mod.rs
charlottek/src/: main.rs
(+130 files in other folders)
