[package]
name = "catten"
version = "0.2.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "catten"
path = "src/main.rs"
test = false
bench = false

[features]
limine = []
default = ["limine"]

[dependencies]
hashbrown = "*"
limine = ">=0.5.0"
spin = { version = ">=0.10.0", features = ["ticket_mutex", "lock_api"] }
talc = { version = "*" }
uacpi-raw = {git = "https://codeberg.org/CharlotteOS/uacpi-raw.git", branch = "main"}


[profile.dev]
debug = "full"
debug-assertions = true
panic = "abort"
lto = false
opt-level = 0

[profile.release]
debug = "none"
debug-assertions = false
panic = "abort"
lto = false
opt-level = 3
