[package]
name = "catten"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "catten"
path = "src/main.rs"
test = false
bench = false

[features]
limine = []
default = ["limine"]

[dependencies]
hashbrown = ">=0.16.0"
limine = ">=0.5.0"
os-terminal = ">=0.6.11"
spin = { version = ">=0.10.0", features = ["ticket_mutex", "lock_api"] }
talc = { version = ">=4.4.3" }
uacpi-raw = {git = "https://codeberg.org/CharlotteOS/uacpi-raw.git", branch = "main"}


[profile.dev]
debug = "full"
debug-assertions = true
panic = "abort"
lto = false
opt-level = 0

[profile.release]
debug = "none"
debug-assertions = false
panic = "abort"
lto = false
opt-level = 3
